deploy: 89e4eec5ffb0386a91ec3be288931ef527ca073d

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-e596ef10.js";
+            window.path_to_searchindex_js = "searchindex-b478b179.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-a2c5dde0.js"></script>
@@ -176,21 +176,21 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome to the Brevis ProverNet, the foundational coordination layer for the ZK ecosystem. ProverNet operates as a <strong>decentralized marketplace</strong> that bridges the gap between applications requiring zero-knowledge proofs and the specialized hardware capable of generating them</p>
+<p>Welcome to the Brevis ProverNet, the foundational coordination layer for the ZK ecosystem. ProverNet operates as a <strong>decentralized marketplace</strong> that bridges the gap between applications requiring zero-knowledge proofs and the specialized hardware capable of generating them.</p>
 <hr>
 <h4 id="coordinating-the-zk-ecosystem"><a class="header" href="#coordinating-the-zk-ecosystem">Coordinating the ZK Ecosystem</a></h4>
-<p>As the demand for verifiable computation and trustless applications scales, the need for high-performance, cost-effective ZK proving capacity is growing rapidly. ProverNet addresses this by creating a unified environment where all participants—from developers to hardware providers—interact to drive the efficiency of zero-knowledge technology.</p>
+<p>As the demand for verifiable computation and trustless applications scales, the need for high-performance, cost-effective ZK proving capacity is growing rapidly. ProverNet addresses this by creating a unified environment where all participants (from developers to hardware providers) interact to drive the efficiency of zero-knowledge technology.</p>
 <ul>
-<li><strong>ZK App Developers</strong>: Focus entirely on building innovative application logic without the burden of managing complex proving infrastructure. By defining computational work for the <strong>Pico zkVM</strong>, developers gain instant access to a global network of hardware.</li>
+<li><strong>ZK App Developers</strong>: Focus entirely on building innovative application logic without the burden of managing complex proving infrastructure. By defining computational work for the <strong>Pico zkVM</strong>, developers gain instant access to a global proving network.</li>
 <li><strong>ZK App Users</strong>: Benefit from lower costs and faster response times for verifiable transactions. Real-time competition between provers ensures that efficiency gains are passed directly to users via optimized proof fees.</li>
 <li><strong>Provers</strong>: Hardware providers find a streamlined way to monetize their capacity. The network’s auction mechanism matches provers with the specific workloads that best suit their hardware optimizations.</li>
 <li><strong>Stakers</strong>: Token holders provide the economic security that underpins every proof. By delegating BREV to reputable provers, stakers help ensure a high quality of service while participating in the growth of the proving economy.</li>
 </ul>
 <hr>
 <h4 id="the-brev-economy"><a class="header" href="#the-brev-economy">The BREV Economy</a></h4>
-<p>The <strong>BREV token</strong> serves as the heartbeat of the ProverNet economy, aligning incentives and facilitating value exchange across the network:</p>
+<p>The <strong>BREV token</strong> serves as the core of the ProverNet economy, aligning incentives and facilitating value exchange across the network:</p>
 <ul>
-<li><strong>Payment Medium</strong>: BREV is the native settlement currency for all proving services.</li>
+<li><strong>Payment Medium</strong>: BREV is the native settlement currency for all proving services</li>
 <li><strong>Economic Security</strong>: Provers and delegators stake BREV to guarantee network reliability. This collateral ensures that prover nodes remain committed to delivering valid proofs within requested deadlines.</li>
 <li><strong>Reward Distribution</strong>: Staked BREV qualifies participants to receive a share of the network’s generated proof fees and rewards, incentivizing long-term support and high-quality service.</li>
 <li><strong>Network Governance</strong>: BREV holders govern critical protocol parameters, such as marketplace fee structures and minimum security requirements.</li>
