--- a/operation-manual/operate-a-prover-node/index.html
+++ b/operation-manual/operate-a-prover-node/index.html
@@ -36,7 +36,7 @@
             const path_to_root = "../../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../../searchindex-e596ef10.js";
+            window.path_to_searchindex_js = "../../searchindex-b478b179.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="../../toc-a2c5dde0.js"></script>
@@ -187,7 +187,7 @@
 <p>Becoming an active prover involves a streamlined path from infrastructure setup to active participation:</p>
 <ol>
 <li><strong>Hardware &amp; Environment</strong>: Provisioning high-performance hardware and stable network connectivity to ensure proofs are generated and submitted within the required timeframe.</li>
-<li><strong>Software Deployment</strong>: First deploy the Proving Server to establish your computational baseline, followed by the Bidder Server to connect that power to the <code>BrevisMarket</code>..</li>
+<li><strong>Software Deployment</strong>: First deploy the Proving Server to establish your computational baseline, followed by the Bidder Server to connect that power to the <code>BrevisMarket</code>.</li>
 <li><strong>Prover Account Initialization</strong>: Setting up your prover profile via the <code>StakingController</code>. We also recommend authorizing Submitter Addresses (worker keys) to handle automated on-chain actions while keeping your primary staking key safe (in cold storage).</li>
 </ol>
 
