--- a/user-tutorial/staking-in-provernet.html
+++ b/user-tutorial/staking-in-provernet.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Staking in ProverNet</title>
+        <title>Staking in ProverNet - Brevis ProveNet</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="../favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="../favicon-f2934afb.png">
         <link rel="stylesheet" href="../css/variables-8adf115d.css">
         <link rel="stylesheet" href="../css/general-2459343d.css">
         <link rel="stylesheet" href="../css/chrome-cc69e1fb.css">
@@ -28,6 +28,7 @@
         <link rel="stylesheet" id="mdbook-ayu-highlight-css" href="../ayu-highlight-56612340.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../theme/custom-fc75f45e.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -38,7 +39,7 @@
             window.path_to_searchindex_js = "../searchindex-a5f92462.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-55dbec7a.js"></script>
+        <script src="../toc-a2c5dde0.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -137,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">Brevis ProveNet</h1>
 
                     <div class="right-buttons">
                         <a href="../print.html" title="Print this book" aria-label="Print this book">
@@ -183,14 +184,14 @@
 <p>Note that if the delegated prover fails to meet its SLA commitments, your delegated stake may be slashed. Therefore, it is critical to carefully evaluate different proving providers and adjust<br>your stakes from time to time. Visit Brevis Prover Network <em>[Link]</em> and you can view all active provers in the ProverNet, along with key statistics such as the number of BREV staked, the number of proofs generated, and the proof fee received.</p>
 <h4 id="stake-brev"><a class="header" href="#stake-brev">Stake BREV</a></h4>
 <p>To start staking your BREV, you will need to connect wallet and select the prover you would like to stake with. </p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.19.49.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.19.49.png" alt=""><figcaption></figcaption></p>
 <p>Once wallet is connected, the <em>Stake</em> button will be enabled and you can click the button to stake now!</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.33.54.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.33.54.png" alt=""><figcaption></figcaption></p>
 <p>You may need to <em>Approve</em> the Brevis staking contract first to allow it to spend your BREV. Once sufficient amount is approved, the <em>Stake</em> button will be enabled, and you can submit the stake transaction.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.32.25.png" alt=""><figcaption></figcaption></figure>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.36.00.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.32.25.png" alt=""><figcaption></figcaption></p>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.36.00.png" alt=""><figcaption></figcaption></p>
 <p>You can also increase your stake with provers you’ve already delegated to. Visit the <em>Dashboard</em> <em>[Link]</em> to see your current delegated provers and use the <em>Stake More</em> option to add additional BREV.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.37.21.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 20.37.21.png" alt=""><figcaption></figcaption></p>
 <h4 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h4>
 <p>On the Dashboard <em>[LINK]</em>, you can view your total stake and see detailed staking information for each prover, including the staked amount, the pending unstake amount, and the withdrawable amount.</p>
 <ul>
@@ -201,13 +202,13 @@
 </ul>
 <h4 id="unstake-brev"><a class="header" href="#unstake-brev">Unstake BREV</a></h4>
 <p>You can unstake your BREV at any time by clicking the <em>Request Unstake</em> button on the Dashboard page. </p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.03.56.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.03.56.png" alt=""><figcaption></figcaption></p>
 <p>First, you may need to <em>Approve</em> the Brevis staking contract to allow it to unstake your BREV. Once sufficient amount is approved, the <em>Unstake</em> button will be enabled, and you can submit the unstake transaction. Please note that the unstaking process takes <strong>7 days</strong>. After the waiting period, you can withdraw your BREV and have them returned to your account.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 21.46.15 (1).png" alt=""><figcaption></figcaption></figure>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.01.40.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 21.46.15 (1).png" alt=""><figcaption></figcaption></p>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.01.40.png" alt=""><figcaption></figcaption></p>
 <h4 id="withdraw-brev"><a class="header" href="#withdraw-brev">Withdraw BREV</a></h4>
 <p>You can withdraw your unstaked BREV once the 7-day processing window has passed, by simply clicking the <em>Withdraw</em> button on the Dashboard page. If you have no unstaked BREV or your unstaked BREV is still within the 7-day waiting period, the <em>Withdraw</em> button will be disabled.</p>
-<figure><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.48.11.png" alt=""><figcaption></figcaption></figure>
+<p><img src="../.gitbook/assets/Screenshot 2025-12-24 at 22.48.11.png" alt=""><figcaption></figcaption></p>
 
                     </main>
 
