deploy: 3a4643786cdc177c100518bcdd791317cb6e42c4

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-a5f92462.js";
+            window.path_to_searchindex_js = "searchindex-5e5b7bbf.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-a2c5dde0.js"></script>
@@ -190,7 +190,7 @@
 <h4 id="the-brev-economy"><a class="header" href="#the-brev-economy">The BREV Economy</a></h4>
 <p>The <strong>BREV token</strong> serves as the core of the ProverNet economy, aligning incentives and facilitating value exchange across the network:</p>
 <ul>
-<li><strong>Payment Medium</strong>: BREV is the native settlement currency for all proving services.</li>
+<li><strong>Payment Medium</strong>: BREV is the native settlement currency for all proving services</li>
 <li><strong>Economic Security</strong>: Provers and delegators stake BREV to guarantee network reliability. This collateral ensures that prover nodes remain committed to delivering valid proofs within requested deadlines.</li>
 <li><strong>Reward Distribution</strong>: Staked BREV qualifies participants to receive a share of the network’s generated proof fees and rewards, incentivizing long-term support and high-quality service.</li>
 <li><strong>Network Governance</strong>: BREV holders govern critical protocol parameters, such as marketplace fee structures and minimum security requirements.</li>
